# jpostcode_rs

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: advanced.rs  basic.rs  basic01.rs  fuzzy_search.rs  poi.rs
src/: lib.rs
