[package]
name = "jpostcode_rs"
version = "0.1.0"
edition = "2021"
description = "Japanese postal code lookup library in Rust, powered by jpostcode-data"
license = "MIT"
repository = "https://github.com/yourusername/jpostcode_rs"
documentation = "https://docs.rs/jpostcode_rs"
readme = "README.md"
keywords = ["japan", "postal", "zipcode", "address", "lookup"]
categories = ["parser-implementations", "data-structures"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
    "json/*.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.8"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
